--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "admin-lte": "^3.1.0",
         "bootstrap": "^4.6.0",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "sweetalert2": "^11.0.18"
     }
 }
